--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <h2>Result</h2>
         <ul>
           <br />
-          <li><a https://bceceboard.bihar.gov.in/"></a>Download First Round Provisional Seat allotment order of DCECE[PE]-2023</li>
+          <li><a https://bceceboard.bihar.gov.in/">Download First Round Provisional Seat allotment order of DCECE[PE]-2023</a></li>
           <br />
           <li>
             <a href="https://upsc.gov.in/">UPSC CPF AC 2022 Final Result</a>
