--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
         <h2>Result</h2>
         <ul>
           <br />
-          <li>  <a href="https://upsc.gov.in/whats-new"
-              >UPSC Engineering Services Main Result 2023</a
+          <li>  <a href="https://admissions.nic.in/Bihar/Applicant/root/Home.aspx?boardId=112052321"
+              >Bihar Polytechnic Counselling 2023 Important Links</a
             >
           </li>
           <br />
