--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Sarkari Result, Sarkari Results : SarkariResult.com provides latest Sarkari Result Jobs, Online Form, Sarkari Naukri Result in Sarkari Result 2023 various sectors such as Railway, Bank, SSC, Navy, Police, UPPSC, UPSSSC, UPTET, UP Scholarship and other sarkari result Com alerts at one place सरकारी रिजल्ट  ">
+<meta name="keywords" content="Sarkari Result, Sarkari Results, sarkari result 2023,  latest sarkari result, Sarkariresult, Sarkari, Sarkariresults, Sarkari Naukri, sarkari results 2023, sarkari result 2023, Sarkari Exam, SarkariResult.com">
     <link rel="stylesheet" href="sarkari.css" />
-    <title>sarkarijob</title>
+    
+    <title>govtexam</title>
   </head>
   <body>
     <header>
