--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </header>
     <div class="navbar">
       <ul>
-        <li><a href="govtexam.html">Home</a></li>
+        <li><a href="https://www.govtexam.online">Home</a></li>
         <li><a href="https://pktechgith.github.io/pktech3436/">About</a></li>
         <li><a href="https://wa.me/qr/OGAPFILOR2MBA1">contact</a></li>
       </ul>
