--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
         <ul>
           <br />
           <li>  <a href="https://admissions.nic.in/Bihar/Applicant/root/Home.aspx?boardId=112052321"
-              >Bihar Polytechnic Counselling 2023 Important Links</a
+              >Bihar Polytechnic 2nd Seat Allotment Download Link</a
             >
           </li>
           <br />
           <li>
-            <a href="https://upsc.gov.in/">UPSC CPF AC 2022 Final Result</a>
+            <a href="https://admissions.nic.in/Bihar/Applicant/root/Home.aspx?boardId=112052321">Bihar Polytechnic 1st Seat Allotment Download Link</a>
           </li>
           <br />
           <li>
