--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Sarkari Result, Sarkari Results : Govtexam.online provides latest Sarkari Result Jobs, Online Form, Sarkari Naukri Result in Sarkari Result 2023 various sectors such as Railway, Bank, SSC, Navy, Police, UPPSC, UPSSSC, UPTET, UP Scholarship and other sarkari result Com alerts at one place सरकारी रिजल्ट  ">
-<meta name="keywords" content="Govtexam, Government exam, Government Exam 2023,  latest Governmentexam, , Govtexam.online, Govtexan, Government Naukri, Govt Exam 2023, Govtexam result 2023, Government Exam, Govtexam.online">
+    <meta name="description" content="Latest job, Admission, Online : Govtexam.online provides latest Jobs, Online Form, Admission, Result in Govtexam 2023 various sectors such as Railway, Bank, SSC, Navy, Police, UPPSC, UPSSSC, UPTET, UP Scholarship and other sarkari result Com alerts at one place Governmentexam  ">
+<meta name="keywords" content="Govtexam, Governmentexam, Government Exam 2023,  latest Governmentexam,Governmentexm.online , Govtexam.online, Govtexam, Government Naukri, Government Exam 2023, Govtexam result 2023, Government Exam, Govtexam.online">
     <link rel="stylesheet" href="sarkari.css" />
     
-    <title>govtexam</title>
+    <title>Govtexam</title>
+      <link rel="icon" type="image/png" href="govtexamtitle.png"/>
   </head>
   <body>
     <header>
