--- a/index.html
+++ b/index.html
@@ -233,14 +233,14 @@
         <ul>
           <br />
           <li>
-            <a href="https://rpsc.rajasthan.gov.in/advertisements"
-              >RPSC RAS 2023 Pre Exam Date</a
+            <a href="https://www.ssc-cr.org/mts_2023_2024.php?proceed=yes"
+              >SSC MTS and Havaldar Admit Card 2023</a
             >
           </li>
           <br />
           <li>
-            <a href="https://uppsc.up.nic.in/"
-              >UPPSC Civil Judge Interview Letter</a
+            <a href="https://onlinebpsc.bihar.gov.in/main/home"
+              >Bihar School Teacher TGT, PGT, Primary Admit Card 2023</a
             >
           </li>
           <br />
